--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* font-size: calc(10px + 2vmin); */
   color: white;
+  font-family: monospace;
 }
 
-.App-link {
-  color: #61dafb;
+.parent-box {
+  position: relative;
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box-item {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  color: #000;
+}
+
+.parent-box {
+  font-weight: bold;
+  font-size: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
